--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,14 +8,28 @@
         android:minSdkVersion="17"
         android:targetSdkVersion="19" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" >
+    </uses-feature>
+
+    <permission
+        android:name="com.peterfile.mac_tracker.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.peterfile.mac_tracker.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+"
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/jog_tab_left_confirm_yellow"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -23,17 +37,30 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.peterfile.mac_tracker.ActivityMap"
+            android:label="@string/activity_map_title" >
+        </activity>
+        <activity
+            android:name="com.peterfile.mac_tracker.ActivitySettings"
+            android:label="@string/activity_settings_title" >
+        </activity>
 
         <service
-        	android:name=".LocationService"
-        	android:label="LocationService" >
-    	</service>
-        
+            android:name=".LocationService"
+            android:label="LocationService" >
+        </service>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDikRBleLV8kxVNL3TFOsfhJHa3i0PGfbI" />
     </application>
+
 </manifest>
